test_cases/tests/diesel/queryable_order_missmatch.stderr
error[E0277]: the trait bound `(std::string::String, i32): FromStaticSqlRow<(diesel::sql_types::Integer, diesel::sql_types::Text), Pg>` is not satisfied
    --> tests/diesel/queryable_order_missmatch.rs:17:18
     |
17   |     users::table.first(conn)
     |                  ^^^^^ the trait `FromStaticSqlRow<(diesel::sql_types::Integer, diesel::sql_types::Text), Pg>` is not implemented for `(std::string::String, i32)`
     |
     = help: the following implementations were found:
               <(T0,) as FromStaticSqlRow<(ST0,), __DB>>
               <(T1, T0) as FromStaticSqlRow<(ST1, ST0), __DB>>
               <(T1, T2, T0) as FromStaticSqlRow<(ST1, ST2, ST0), __DB>>
               <(T1, T2, T3, T0) as FromStaticSqlRow<(ST1, ST2, ST3, ST0), __DB>>
             and 12 others
note: required because of the requirements on the impl of `diesel::Queryable<(diesel::sql_types::Integer, diesel::sql_types::Text), Pg>` for `User`
    --> tests/diesel/queryable_order_missmatch.rs:10:10
     |
10   | #[derive(Queryable)]
     |          ^^^^^^^^^
11   | struct User {
     |        ^^^^
     = note: required because of the requirements on the impl of `FromSqlRow<(diesel::sql_types::Integer, diesel::sql_types::Text), Pg>` for `User`
     = note: required because of the requirements on the impl of `load_dsl::private::CompatibleType<User, Pg>` for `(diesel::sql_types::Integer, diesel::sql_types::Text)`
     = note: required because of the requirements on the impl of `LoadQuery<'_, diesel::PgConnection, User>` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::LimitClause<diesel::internal::derives::as_expression::Bound<BigInt, i64>>, diesel::query_builder::offset_clause::NoOffsetClause>>`
note: required by a bound in `first`
    --> $CARGO/diesel-2.0.0-rc.0/src/query_dsl/mod.rs
     |
     |         Limit<Self>: LoadQuery<'query, Conn, U>,
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `first`
     = note: this error originates in the derive macro `Queryable` (in Nightly builds, run with -Z macro-backtrace for more info)
